--- a/timeconverter.html
+++ b/timeconverter.html
@@ -90,8 +90,8 @@
         }
 
         document.getElementById('utcTime').textContent = convertedTimes.UTC;
-        document.getElementById('tpeTime').textContent = convertedTimes.UTC;
-        document.getElementById('nzstTime').textContent = convertedTimes.UTC;
+        document.getElementById('tpeTime').textContent = convertedTimes.TPE;
+        document.getElementById('nzstTime').textContent = convertedTimes.NZST;
         document.getElementById('estTime').textContent = convertedTimes.EST;
         document.getElementById('pstTime').textContent = convertedTimes.PST;
         document.getElementById('jstTime').textContent = convertedTimes.JST;
