--- a/timeconverter.html
+++ b/timeconverter.html
@@ -45,7 +45,7 @@
         <select id="timezone" required>
             <option value="UTC">UTC</option>
             <option value="TPE">TPE</option>
-            <option value="NZST">TPE</option>
+            <option value="NZST">NZST</option>
             <option value="EST">EST</option>
             <option value="PST">PST</option>
             <option value="JST">JST</option>
