--- a/timeconverter.html
+++ b/timeconverter.html
@@ -55,8 +55,8 @@
 
         <h3>Converted Times:</h3>
         <p>UTC: <span id="utcTime"></span></p>
-        <p>UTC: <span id="tpeTime"></span></p>
-        <p>UTC: <span id="nzstTime"></span></p>
+        <p>TPE: <span id="tpeTime"></span></p>
+        <p>NZST: <span id="nzstTime"></span></p>
         <p>EST: <span id="estTime"></span></p>
         <p>PST: <span id="pstTime"></span></p>
         <p>JST: <span id="jstTime"></span></p>
